2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* itcl/configure: Regen.
	* itcl/configure.in:
	* itk/configure: Regen.
	* itk/configure.in: Include user set CFLAGS
	in the CFLAGS passed to the compiler.

2003-07-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* itcl/Makefile.in: Add installdirs to deps
	for the install-libraries rule so that
	the itcl dir is created before files are
	copied into it. This will keep the itcl.tcl
	file from being installed as a file named
	share/itcl3.2.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* itk/library/Toplevel.itk (destructor):
	* itk/library/Widget.itk (destructor): Protect
	against case where one external component destroy
	destroys another componet widget.
	* itk/tests/toplevel.test:
	* itk/tests/widget.test: Test for bug where one
	external component deletes another during the
	itk destructor.

2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* itk/configure: Regen to account for
	--enable-symbols fix.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* itcl/configure: Regen.
	* itcl/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.
	* itk/configure: Regen.
	* itk/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* tcl.m4 (SC_MAKE_LIB): Split up library link
	lines based on $host instead of $CC.
	* itcl/configure: Regen.
	* itk/configure: Regen.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* itcl/configure: Regen.
	* itcl/configure.in: Set the c preprocessor and
	executable extensions to work around problems
	that autoconf 2.13 has with VC++.
	* itk/configure: Regen.
	* itk/configure.in: Ditto.

2003-02-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* iwidgets3.0.0/configure: Regenerate to fix timestamp
	that was messed up by the import from sources.

2002-09-05  Keith Seitz  <keiths@redhat.com>
